--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -34,7 +34,12 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "server": "src/main.server.ts",
+            "outputMode": "server",
+            "ssr": {
+              "entry": "src/server.ts"
+            }
           },
           "configurations": {
             "production": {
@@ -100,6 +105,6 @@
     }
   },
   "cli": {
-    "analytics": "0779ed0d-00b9-4b34-90f5-32701eb6c4fb"
+    "analytics": "e92e5058-e7ae-4fd3-a30d-19aaf57cf282"
   }
 }
